# Semantic_Versioning

./: .gitignore  AGENTS.MD  AGENTS.md  CODEX.md  Canvas Copied Confirmation .md  GEMINI.MD  GEMINI.md  INSTRUCTIONS.md  INSTUCTIONS.MD  README.MD  README.md  canvas-copied-confirmation.md  main.py  projectstuct.txt  prompt.md  pyproject.toml  semantic-versioning-summary.md  semantic_versioning.html
docs/: 1.0.0-checklist.md
semver_validator/: api.py
tests/: test_api_analyzer.py  test_semver_validator.py
